[tool.poetry]
name = "orionx-api-client"
version = "1.1.0"
description = "API Client for Orionx Exchange"
authors = ["Ignacio Guerrero <ignacio.tolosa@usach.cl>"]
license = "MIT"
readme = "README.md"
packages = [{include = "orionx_api_client"}]

[tool.poetry.dependencies]
python = ">=3.7,<4"
requests = "^2.31.0"
graphql-core = "^3.2.3"
gql = "^3.4.1"
requests-toolbelt = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = { version = "^23.7.0", python = ">=3.8,<4" }
pytest-recording = "^0.13.0"
isort = { version = "^5.12.0", python = ">=3.8.0,<4" }
pytest-cov = "^4.1.0"
python-dotenv = { version = "^1.0.0", python = ">=3.8.0,<4" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
